# rag-mcp

./: ARCHITECTURE.md  Dockerfile  GOAL.md  README.md  REPORT.md  docker-compose.yml  mcp_client.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  task.md
sample_docs/: api_reference.md  coding_standards.md  example.py
src/: __init__.py  config.py  server.py
src/indexer/: __init__.py  chroma_manager.py  document_loader.py  text_splitter.py
src/rag/: __init__.py  graph.py  nodes.py  prompts.py  state.py
src/utils/: __init__.py  ollama_client.py
tests/: test_indexer.py  test_mcp_tools.py  test_rag_graph.py
