[project]
name = "rag-mcp"
version = "0.1.0"
description = "MCP-сервер с локальной LLM и LangGraph для RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.2.0",
    "chromadb>=0.4.0",
    "ollama>=0.1.0",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]